--- a/Blog.html
+++ b/Blog.html
@@ -18,7 +18,8 @@ Body  {background-image: url(background.jpg);}
   <a href="Blog.html">Blog</a>
   <a href="Aboutme.html">About Me</a></center>
 <h1>Travel Blog</h1>
-<p> </p>
+<center><img src="travelblog.jpg" alt="About me pic" width= "250" height= "300" ></center>
+<p><center>October 3rd, 2022 I said goodbye to my cousin and my mom. As I got ready to leave for a trip to London that none of us knew how long it would last for. This moment was bittersweat as I was embarking on my new adventure. I was sad to leave behind my family, but so happy to start a new journey. I was embracing the unknown and just going with the flow. I had only booked a one way flight to London and book a hostel for a few nights. Who would I meet? What would I do there? Will my hostel be nice? How are hostels? So many questions with no answers yet. There were so many unknowns. Having to patiently wait till I had arrived in London. Luckily at the time there was a new airline called Norse Atlantic Airways and they had cheap flights so I booked my seat in the first class part of the plane. However, it was not first class, it was comfort or something like that. This felt like first class to me because I was in the front of the plane, got to board first, had lots of leg room, my chair reclined back far, two meals were included, and 2 or 3 drinks were inlcuded as well. Where if you booked in economy you would only get one meal and one or two drinks throughout the flight. So this felt like paradise to me and it was so comfy. I was given free headphones and put on a movie as I waited to be served dinner in a few hours. Then once dinner was served I fell asleeep. When I woke up I waited for breakfast which was a bagel with ham and creamcheese. It was an interesting combination. I think I only ate some of it. When we were about to Land... screeching of the tires <br> .... <br> and then all you hear is... <br> ... <br> <br> <br> to be continued </center> </p>
 
 
 
