--- a/Blog.html
+++ b/Blog.html
@@ -5,7 +5,7 @@
 <LINK REL="STYLESHEET" HREF="MYSTYLE.CSS">
 <title>Just Maxs Life Travel Company</title>
 <style>
-Body  {background-image: url(background.jpg);}
+Body  {background-image: url(background8.png);}
     Body {background-position: center;}
   </style>
 </head>
@@ -13,7 +13,7 @@ Body  {background-image: url(background.jpg);}
 <P CLASS="INTRO">
 
 
-<h1><img src="Title.png" alt="JML logo" width= "500" height= "250"><br>Travel Company</h1>
+<h1><img src="JML.png" alt="JML logo" width= "500" height= "250"></h1>
 <center><a href="travel.html">Trips</a>
   <a href="Blog.html">Blog</a>
   <a href="Aboutme.html">About Me</a></center>
