--- a/Travelchatai.html
+++ b/Travelchatai.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <LINK REL="STYLESHEET" HREF="MYSTYLE.CSS">
     <title>Travel Group Chats</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <style>
