--- a/Aboutme.html
+++ b/Aboutme.html
@@ -32,7 +32,7 @@ Stay in hotels/hostels depending on the trip you pick, be in each place for 2-3 
  <br>You won't regret it!<br>
  Make the best memories<br>
  Travel for cheap and make new friends! <br>
-<a href="travel.html"> Click here to learn more!</a>
+<a href="whyyoushouldtravel.html"> Click here to learn more!</a>
 
 
 
