--- a/travel.html
+++ b/travel.html
@@ -114,6 +114,7 @@ div.scroll-container img {
     <img src="Lisbon5.jpg" alt="Mountains"width= "250" height= "300">
     <img src="Lisbon6.jpg" alt="Picture one" width= "250" height= "300" >
   </div>
+  <p>Enjoy a nightout on Pink Street, barhopping, making friends in hostels and at bars, go clubbing till 9 am! Travel to close by towns and see the cliffs. Admire the corks and tiles made in Portugal. Don't forget to try Pastel de nata! Lots of history with the Belem Tower, Sao Jorge Castel, and so much more! Enjoy the view from the Sao Jorge Castel with some friendly free roaming peacocks within the castel.  </p>
 <h1>United Kingdom</h1>
 <p><center>
   <div class="scroll-container">
@@ -128,7 +129,7 @@ div.scroll-container img {
     <img src="London9.jpg" alt="Mountains"width= "250" height= "300">
   </div>
    <br>London<p> </center></p>
-
+Enjoy views from the London Eye and get a 360 view of London. See the Big Ben and the Buckingham Palace. Lots of markets like the Borough Market, Camden Market, and so much more! Go thrifting and enjoy an expresso martini at a bar. At night meet up with friends at a hostel and enjoy a night out in town. Barhopping from clubs, and bars. Fun bars too like a ballpit bar and a bar with shapes for a name!
 
 <script src="testscript.js" defer></script>
 </body>
